samples/_failures_safe/1761720946_30779e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61035c64.c: In function ‘main’:
./samples/SAFE/__tmp_61035c64.c:186:20: error: expected ‘]’ at end of input
  186 |     char input[1024
      |                    ^
      |                    ]
./samples/SAFE/__tmp_61035c64.c:186:5: error: expected declaration or statement at end of input
  186 |     char input[1024
      |     ^~~~
